--- a/css/style.css
+++ b/css/style.css
@@ -96,6 +96,11 @@ body{margin: 0}
     border:1px solid #fff;
     background: rgba(256,256,256,0.2);
     text-decoration: none;
+    transition: 0.5s ease-in-out;
+}
+.btn:hover{
+    background: #fff;
+    color: #757572;
 }
 .container{
     max-width: 1170px;
@@ -297,7 +302,9 @@ main{}
                 text-transform: uppercase;
                 text-decoration: none;
             }
-
+            footer nav a:hover{
+                color:#767676;
+            }
 
 @media (min-width: 481px)  and (max-width : 780px) {
     .about_us_text{
@@ -354,6 +361,7 @@ main{}
     }
     header:after{
         margin-bottom: -6px;
+        display: none;
     }
     header nav , footer nav{
         justify-content: center;
@@ -366,6 +374,7 @@ main{}
              font-size: 13px;
              padding-right: 15px;
          }
+
     header nav a:first-child{
         padding: 0;
     }
